syntax = "proto3";

package proto.balance_config;

option go_package = "github.com/tel4vn/fins-microservices/gen/proto/pb;pb";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "buf/validate/validate.proto";

message BalanceConfigBodyRequest {
    string weight = 1;
    string balance_type = 2;
    string priority = 3;
    string provider = 4;
    bool status = 5;
}

message BalanceConfigRequest {
    int32 limit = 1;
    int32 offset = 2;
    repeated string weight = 3;
    repeated string priority = 4;
    repeated string provider = 5;
    string status = 6;
}

message BalanceConfigByIdRequest {
    string id = 1;
}

message BalanceConfigResponse {
    string code = 1;
    string message = 2;
    repeated google.protobuf.Struct data = 3;
    int32 total = 4;
}

message BalanceConfigPutRequest {
    string id = 1;
    string balance = 2;
    string balance_type = 3;
    string provider = 4;
    string priority = 5;
    bool status = 6;
}

message BalanceConfigByIdResponse {
    string code = 1;
    string message = 2;
    google.protobuf.Struct data = 3;
}

service BalanceConfig {
    rpc PostBalanceConfig (BalanceConfigBodyRequest) returns (BalanceConfigByIdResponse) {
        option (google.api.http) = {
            post : "/bss/v1/balance-config",
            body: "*"
        };
    }
    rpc GetBalanceConfigs (BalanceConfigRequest) returns (BalanceConfigResponse) {
        option (google.api.http) = {
            get : "/bss/v1/balance-config",
        };
    }
    rpc GetBalanceConfigById (BalanceConfigByIdRequest) returns (BalanceConfigByIdResponse) {
        option (google.api.http) = {
            get: "/bss/v1/balance-config/{id}",
        };
    };
    rpc PutBalanceConfigById (BalanceConfigPutRequest) returns (BalanceConfigByIdResponse) {
        option (google.api.http) = {
            put: "/bss/v1/balance-config/{id}",
            body: "*"
        };
    };
    rpc DeleteBalanceConfigById (BalanceConfigByIdRequest) returns (BalanceConfigByIdResponse) {
        option (google.api.http) = {
            delete: "/bss/v1/balance-config/{id}",
        };
    }
}